@@ -1049,11 +1049,14 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
     int numAdded;
     int numRemoved;
     rpmps ps;
+    int _unsafe_rollbacks = 0;
 
     if (argv != NULL && *argv != NULL) {
 	rc = -1;
 	goto exit;
     }
+
+    _unsafe_rollbacks = rpmExpandNumeric("%{?_unsafe_rollbacks}");
 
     vsflags = rpmExpandNumeric("%{?_vsflags_erase}");
     if (ia->qva_flags & VERIFY_DIGEST)
@@ -1122,9 +1125,8 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
 	/* Install the previously erased packages for this transaction. */
 	while (rp != NULL && rp->val.u32 == thistid) {
 
-/*@-nullpass@*/ /* FIX: rp->key may be NULL */
-	    rpmMessage(RPMMESS_DEBUG, "\t+++ %s\n", rp->key);
-/*@=nullpass@*/
+	    rpmMessage(RPMMESS_DEBUG, "\t+++ install %s\n",
+			(rp->key ? rp->key : "???"));
 
 /*@-abstract@*/
 	    rc = rpmtsAddInstallElement(ts, rp->h, (fnpyKey)rp->key,
@@ -1152,16 +1154,17 @@ int rpmRollback(rpmts ts, struct rpmInstallArguments_s * ia, const char ** argv)
 	while (ip != NULL && ip->val.u32 == thistid) {
 
 	    rpmMessage(RPMMESS_DEBUG,
-			"\t--- rpmdb instance #%u\n", ip->instance);
+			"\t--- erase h#%u\n", ip->instance);
 
 	    rc = rpmtsAddEraseElement(ts, ip->h, ip->instance);
 	    if (rc != 0)
 		goto exit;
 
 	    numRemoved++;
-#ifdef	NOTYET	/* XXX don't count erasures yet */
-	    rpmcliPackagesTotal++;
-#endif
+
+	    if (_unsafe_rollbacks)
+		rpmcliPackagesTotal++;
+
 	    if (!(ia->installInterfaceFlags & ifmask))
 		ia->installInterfaceFlags |= INSTALL_ERASE;
 
